--- a/latex/prelude.tex
+++ b/latex/prelude.tex
@@ -33,12 +33,8 @@ overall \gls{3D} scene.
 
 This can be achieved by adjusting \emph{translate}, \emph{rotate} and
 \emph{scale} properties to arrange \gls{3D} objects. To exacerbate this problem
-further, the orientation the \gls{3D} artists chose for its object may be unknown, if
-% TODO: so what now? convention or no convention?
-there is no convention for \gls{3D} modeling. \sout{Usually their is a convention
-about origin of coordinate system, scaling and orientation} (no there isn't, still
-not sure what to put here). However, one cannot assume that these conventions are
-always met. The main problem is, that \gls{3D} transformations, such as translation,
+further, the orientation the \gls{3D} artists chose for its object may be unknown if
+there is no convention for \gls{3D} modeling. The main problem is, that \gls{3D} transformations, such as translation,
 orientation and scale of single \gls{3D} geometries, need to be adjusted. So far,
 there is no graphical tool that meets both of the following requirements:
 
