--- a/latex/seminararbeit.bib
+++ b/latex/seminararbeit.bib
@@ -1,12 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for kietsy at 2015-08-13 19:37:26 +0200 
+%% Created for kietsy at 2015-08-14 00:05:14 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{httpmethods,
+	Date-Added = {2015-08-13 22:05:08 +0000},
+	Date-Modified = {2015-08-13 22:05:14 +0000},
+	Url = {https://developer.mozilla.org/en-US/docs/Web/HTTP#HTTP_request_methods}}
+
+@webpage{paraviewweb,
+	Date-Added = {2015-08-13 21:24:12 +0000},
+	Date-Modified = {2015-08-13 21:24:19 +0000},
+	Url = {http://paraviewweb.kitware.com/}}
 
 @webpage{angularbootstrap,
 	Date-Added = {2015-08-13 17:37:18 +0000},
