--- a/latex/implementation.tex
+++ b/latex/implementation.tex
@@ -7,16 +7,23 @@
 
 \subsection{Server}
 
-The server has a really small interface.
-When it gets a request it tries to match the request to one of its routes, otherwise tries to serve the requested file from the file system (assuming it is a static file), otherwise answers with a 404, which means \texttt{Not Found}.
+The server has a really small interface, meaning it does not have a lot of routes it servers.
+When it receives a \texttt{GET} request from a client it tries to match the request to one of its routes.
+If no route matches it tries to find a static files that matches the requested route URL.
+If it finds the file, the file is served to the client.
+If not a 404 HTTP code is returned, which means \texttt{Not Found}.
+A \texttt{POST} route also exists for uploading content.
+\texttt{POST} and \texttt{GET} are different HTTP methods.
+An HTTP request to the same route can happen via different methods to evoke different action from the server \cite{httpmethods}.
 
 Some of the routes the server answers to are:
+
 \begin{description*}
-  \item[POST /projects/:project/src/:file]
+  \item[\texttt{POST} /projects/:project/src/:file]
     saving files being uploaded
-  \item[GET /projects]
+  \item[\texttt{GET} /projects]
     return all projects on the server
-  \item[GET /projects/:project]
+  \item[\texttt{GET} /projects/:project]
     return all information for the project \texttt{:project}
 \end{description*}
 
@@ -41,12 +48,29 @@ AngularJS is used for:
 \paragraph{Bootstrapping}
 \label{par:Bootstrapping and Routing}
 
-Listing \ref{list:bootstrap} initializes SceGraToo. In the \texttt{config}
-function routes are defined. When a link is clicked, the browser will not make a
-request to the server and load that page. Instead a new controller takes over and
+Web application need to be bootstrapped. That means there must be one entrypoint
+that starts the JavaScript that makes up the application. And this entrypoint
+needs to be called after all scripts, that are referenced in the \gls{HTML}
+document, have been downloaded from the server. Angular accomplishes this by
+subscribing to the \texttt{DOMContentLoaded} event. Angular will then look for a
+\gls{DOM} element with an ng-app attributes. That attribute is set by the
+developer and tells angular, that the corresponding DOM element is supposed to
+contain an application and the application's name. The bootstrapping process is
+described in Figure~\ref{fig:angularbootstrap}.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=0.5\textwidth]{../assets/concepts-startup.png}
+  \caption{This is angulars bootstrapping process \cite{angularbootstrap}.}
+  \label{fig:angularbootstrap}
+\end{figure}
+
+The code from Listing \ref{list:bootstrap} is for initializing SceGraToo. In the \texttt{config}
+function, routes are defined. When a link is clicked, the browser will not issue a
+request to the server and load that page. Instead, a new controller takes over and
 renders a different template. The advantage of this approach is that the user
-sees immediate feedback, while navigating. The application can render the view and
-react to user input, while its still waiting for some requested resources from
+perceives immediate feedback, while navigating. The application can render the view and
+react to user input, while it is still waiting for some requested resources from
 the server (like a list of all available projects). This approach is called
 single-page application \cite{Mikowski:2013:SPW:2663433}.
 
@@ -72,7 +96,13 @@ window.angular.module('scegratooApp')
       })
   })
   \end{minted}
-  \caption{This is how \gls{SceGraToo} is initialized. It also shows how the routing is defined.}
+  \caption{
+    This is how \gls{SceGraToo} is initialized. It also shows how the routing is defined.
+    E.g. in line 4 to 6 for the index route (the one that is requested when the request
+    contains only the domain: \emph{www.example.com}) is defined to redirect to \texttt{/projects}
+    and in line 7 to 10 it is defined that the \texttt{/project} rout is controlled by
+    the \texttt{ProjectCtrl} and rendered with the \texttt{views/projects.html} template.
+  }
   \label{list:bootstrap}
 \end{listing}
 
@@ -80,7 +110,9 @@ window.angular.module('scegratooApp')
 \label{par:modularisation}
 
 Each controller, view or service is contained in its own module and does not
-pollute the global namespace. In a browser's javascript context the global
+pollute the global namespace.
+An angular service is a lazily instantiated singleton.
+In a browser's JavaScript context, the global
 namespace refers to the namespace that belongs to the \texttt{window} object.
 Defining variables in a script defines these variables on the window object.
 Angular modules prevent this. Modules are registered on a specific angular
@@ -121,8 +153,7 @@ angular.module('scegratooApp')
 \paragraph{Views}
 \label{par:Views}
 
-Angular templates are mostly logicless
-(except for ng-repeat iterators and ng-if statements). Listing \ref{list:view}
+Angular templates are mostly logic-less. Listing \ref{list:view}
 shows a template that renders all projects the corresponding controller
 retrieved from the server.
 
@@ -160,8 +191,8 @@ React works by creating components and nesting them. Listing
 \texttt{TreeNode} is another component that handles a specific tree-view-node.
 Components keep instantiating and returning components until the whole
 scene-graph is traversed. In Listing \ref{list:reactentrypoint} it is shown how
-it is rendered to the \gls{DOM}. The \gls{HTML} syntax is simply syntactic sugar and is
-transpiled into normal javascript before being evaluated (the transpiled
+it is rendered to the \gls{DOM}. The \gls{HTML} syntax inside the JavaScript code is simply syntactic sugar and is
+transpiled into normal JavaScript before being evaluated (the transpiled
 equivalent of Listing \ref{list:reactentrypoint} is shown in Listing
 \ref{list:reacttranspiled}).
 
@@ -217,7 +248,7 @@ const treeViewContainer = document.querySelector('#container')
 const x3dNode = document.querySelector('x3d')
 React.render(React.createElement(TreeView, { data: x3dNode }), treeViewContainer)
   \end{minted}
-  \caption{Shows the transpilation output of Listing \ref{list:reactentrypoint}. This is standard compliant javascript.}
+  \caption{Shows the transpilation output of Listing \ref{list:reactentrypoint}. This is standard compliant JavaScript.}
   \label{list:reacttranspiled}
 \end{listing}
 
@@ -228,12 +259,12 @@ Synchronizing the tree-view when the scene-graph changes, is done by calling
 \texttt{React.render} again, just like in Listing \ref{list:reactentrypoint}. React
 calculates the changes that need to be done to update the \gls{DOM} and applies these.
 
-If the tree-view changes the scene-graph, the same thing happens. Listing
+If the tree-view changes the scene-graph, the process is repeated. Listing
 \ref{list:checkbox} show a check box component. It receives a property called
 \texttt{owner}. That is a scene-graph node. Nodes in x3dom have the render
-property. If the property is true, that node and all its children are rendered,
+attribute. If a attribute is true, that node and all its children, with their render attribute sent to true, are rendered,
 if not, they are not visible. The component is showing the state of the the
-\texttt{owner}'s render property's state. When the user clicks the check box, the
+\texttt{owner}'s render attribute's state. When the user clicks the check box, the
 \texttt{owner}'s attribute is changed. The component does not have to update the
 \gls{DOM} node. React is doing it the next time \texttt{React.render} is called. This
 is a simple example, but the concept holds up for more complicated interactions
