--- a/latex/basics.tex
+++ b/latex/basics.tex
@@ -5,6 +5,8 @@
 
 % TODO: put text here
 
+This section examines fundamental and underlying technologies needed to comprehend the described problems and their solutions. 
+
 \subsection{Scene-Graph}\label{scene-graph}
 
 Scene-graphs can be used to group and organize \gls{3D} objects, their properties and
