--- a/latex/concept.tex
+++ b/latex/concept.tex
@@ -14,6 +14,7 @@ In the following sections the initial design concept of \gls{SceGraToo} is illus
 \label{server}
 
 % TODO: put text here
+This section examines technologies that were considered for \gls{SceGraToo}'s implementation.
 
 \subsubsection{Node.js}
 \begin{quote}
