--- a/latex/implementation.tex
+++ b/latex/implementation.tex
@@ -4,6 +4,7 @@
 \label{implementation}
 
 % TODO: put text here
+In the following sections the technology that was eventually used to implement \gls{SceGraToo} is dissected and explained in detail.
 
 \subsection{Server}
 
@@ -29,7 +30,8 @@ Some of the routes the server answers to are:
 
 \subsection{Client}
 
-% TODO: put text here
+The client uses to frameworks to solve different problems.
+Angular is used for managing and organizing most of the application, while react is used for highly dynamic views, like the tree-view.
 
 \subsubsection{Angular}
 \label{angular}
